--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,10 +28,17 @@ nav:
 theme:
         name: material
         logo: logo.png
+        favicon: logo.png
         features: 
             - content.code.copy
             - navigation.footer
             - navigation.expand
+            - navigation.indexes
+            - navigation.sections
+            - navigation.tracking
+            - navigation.tabs
+            - navigation.tabs.sticky
+            - navigation.top
             - search.highlight
             - search.suggest
             - toc.follow
