--- a/conda_env.yml
+++ b/conda_env.yml
@@ -2,10 +2,10 @@ name: combine
 channels:
   - conda-forge
 dependencies:
-  - python==3.8
+  - python=3.8
   - pip
   - pandas
-  - root==6.22
+  - root=6.22
   - gsl
   - tbb
   - vdt
