--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
   build:
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python: ["3.8"]
         root: ["6.22"]
         include:
@@ -39,7 +40,7 @@ jobs:
           # python 3.10 root 6.26
           - python: "3.10"
             root: "6.26.4"
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     name: Compile (py${{ matrix.python }}, root${{ matrix.root }})
 
     steps:
