--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,9 @@ nav:
             - Statistical Tests: what_combine_does/statistical_tests.md
         - Setting up the analysis:
           - "Preparing the datacard": part2/settinguptheanalysis.md
-          - "Physics models": part2/physicsmodels.md
+          - "Physics models":
+              - "Introduction": part2/physicsmodels.md
+              - "BSM Higgs models": part2/bsm-higgs-models.md
           - "Automatic MC statistical uncertainties": part2/bin-wise-stats.md
         - Running combine:
           - "Running the tool":           part3/runningthetool.md
@@ -24,7 +26,7 @@ nav:
           - "Debugging fit failures":     part3/debugging.md
         - Tutorials:
           - "RooFit Basics":              part5/roofit.md
-          - "Main Features":                
+          - "Main Features":
             - "Exercises":                part5/longexercise.md
             - "Solutions":                part5/longexerciseanswers.md
           - "Parametric Models":          tutorial2023/parametric_exercise.md
@@ -35,7 +37,7 @@ theme:
         name: material
         logo: logo.png
         favicon: logo.png
-        features: 
+        features:
             - content.code.copy
             - navigation.footer
             - navigation.indexes
