--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ edit_uri: edit/main/docs
 nav:
         - Home: index.md
         - What Combine Does:
-            - Intro: what_combine_does/introduction.md
+            - Introduction: what_combine_does/introduction.md
             - Model and Likelihood: what_combine_does/model_and_likelihood.md
             - Fitting Concepts: what_combine_does/fitting_concepts.md
             - Statistical Tests: what_combine_does/statistical_tests.md
