Changes to mkdocs and CI for using mike to version the docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,12 @@ theme:
             - search.suggest
             - toc.follow
 
+plugins:
+    - mike
+
+extra:
+    version:
+        provider: mike
 
 extra_css:
   - "mystyle.css"
