--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,11 +53,13 @@ extra_css:
   - "mystyle.css"
 
 extra_javascript:
-  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 markdown_extensions:
-        - pymdownx.arithmatex
-        - pymdownx.details
-        - pymdownx.blocks.details
-        - admonition
-        - footnotes 
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.details
+  - pymdownx.blocks.details
+  - admonition
