--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
         name: material
         logo: logo.png
         favicon: logo.png
+        custom_dir: docs/overrides
         features: 
             - content.code.copy
             - navigation.footer
