--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package( ROOT REQUIRED COMPONENTS Core MathMore RooFitCore RooFit RooStats 
 find_package(Eigen3 REQUIRED)
 find_package(Vdt)
 find_package(LCG) # only used for FindBoost in StatAnalysis
-find_package( Boost REQUIRED COMPONENTS program_options filesystem )
+find_package( Boost COMPONENTS program_options filesystem )
 
 message(STATUS "Using ROOT From: ${ROOT_INCLUDE_DIRS}")
 include(${ROOT_USE_FILE})
