--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if(MODIFY_ROOTMAP)
         add_custom_command(
           OUTPUT "${GENERATED_FILE_PATH}.edited"  # Declare the generated file as output
           DEPENDS "${GENERATED_FILE_PATH}"  # Ensure it depends on the original generated file
-          COMMAND sed -i "${GENERATED_FILE_PATH}" -e "/class RooParamKeysPdf/d"
+          COMMAND sed -i    -e "/class RooParamKeysPdf/d"
                             -e "/class RooStarMomentMorph/d"
                             -e "/class RooStats::HistFactory::RooBSpline/d"
                             -e "/class RooStats::HistFactory::RooBSplineBases/d" "${GENERATED_FILE_PATH}"
