Update CMakeLists.txt - make path to header file match how it will be installed
I'm seeing this error that I'm trying to fix:

```
libCMSCombine dictionary payload:5:10: fatal error: 'src/classes.h' file not found
#include "src/classes.h"
         ^~~~~~~~~~~~~~~
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/HiggsAnalysis)
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/HiggsAnalysis/CombinedLimit" )
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-ROOT_GENERATE_DICTIONARY(G__${LIBNAME} src/classes.h LINKDEF src/classes_def.xml
+ROOT_GENERATE_DICTIONARY(G__${LIBNAME} HiggsAnalysis/CombinedLimit/src/classes.h LINKDEF src/classes_def.xml
         MODULE ${LIBNAME}
         OPTIONS --deep)
 add_library(${LIBNAME} SHARED ${SOURCES} G__${LIBNAME}.cxx)
