--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,11 @@ jobs:
     strategy:
       matrix:
         python: ["3.8"]
-        root: ["6.22"]
+        root: ["6.22.08"]  #closest to CMSSW_11_3_4 where we have 6.22.09
         include:
           # to deprecate (11_2_X py2)
           - python: "2.7.18"
-            root: "6.22.08" #closest to CMSSW_11_3_4 where we have 6.22.09
+            root: "6.22.0" 
           # python 3.10 root 6.26
           - python: "3.10"
             root: "6.26.4"
