--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
   build:
     strategy:
       matrix:
-        python: ["3.9"]
-        root: ["6.22.08"]  #closest to CMSSW_11_3_4 where we have 6.22.09
+        python: ["3.8"]
+        root: ["6.22"]  
         include:
           # to deprecate (11_2_X py2)
           - python: "2.7.18"
