split in two steps

--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -25,7 +25,6 @@ jobs:
 
     name: Test with ${{ matrix.CMSSW_VERSION }}
     steps:
-      # checkout the files of this repository
       - uses: actions/checkout@v4
       - uses: cvmfs-contrib/github-action-cvmfs@v4
         with:
@@ -49,6 +48,10 @@ jobs:
             echo ${PATH}
             root --version
             combine --help
+            pwd
+      - name: tests on Combine paper inputs
+        shell: bash -l {0}
+        run: |
             combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-2-template-analysis.txt -M HybridNew --LHCmode LHC-limits --rMax 2.0 --clsAcc 0.01
             combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-3-parametric-analysis.txt -M HybridNew --LHCmode LHC-significance -T 100 --mass 125
             combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-3-parametric-analysis.txt -M Significance --mass 125
@@ -58,7 +61,3 @@ jobs:
             combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-5-multi-signal.txt -M ChannelCompatibilityCheck --mass 125
             text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
             combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root
-
-
-
-
