--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -58,7 +58,9 @@ jobs:
           image: ${{ matrix.IMAGE }}
           options: -v /cvmfs:/cvmfs:shared -v cmsusr:/home/cmsusr/cmssw/:rw -w /home/cmsusr/ -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
           run: |
-            ls 
+            ls
+            ls cmssw/*
+  
             pwd
             cd /home/cmsusr/${CMSSW_VERSION}/src
             cmsenv
